# 3D-Printed-ROS-SLAM-Robot

./: .gitignore  LICENSE  README.md
3D PRINT/STL/: CasterWheelMount.stl  Chassis.stl  Connector.stl  EncoderMount.stl  Gear.stl  MotorMount.stl  Plate.stl  ShaftEncoder.stl  Wheel.stl
3D PRINT/STL/Camera Mount/: Bridge.stl  CameraMountFront.stl  SpacerMountBack.stl
3D PRINT/STL/Robotic Arm/: ArmMountCase.stl  DriveGripper.stl  DrivenGripper.stl  FirstSupport.stl  GripperCase.stl  GripperSpacerReplacement.stl  LeftDriveLink.stl  LeftLongLink.stl  LeftMotionLink.stl  LeftSupportLink.stl  RightDownLink.stl  RightDriveLink.stl  RightParallelLink.stl  RightTriangle.stl  RightUpLink.stl  SecondSupport.stl  VerticalMountCase.stl
Arduino Codes/ROSSerial/: ROSSerial.ino
Arduino Codes/Test/TestEncoders/: TestEncoders.ino
Arduino Codes/Test/TestMotors/: TestMotors.ino
Arduino Codes/Test/TestPID/: TestPID.ino
Fritzing Connections/: slam_bot.fzz
Fritzing Connections/Parts/: BTS7960.fzpz  Jetson Nano.fzpz  Planetary Gearmotor.fzpz  RC_LIPO.fzpz  RPLiDAR USB.fzpz  RPlidar-A1M8.fzpz  YumoE6B2.fzpz
Fusion360/: Drive.step  Motor.step
ROS Codes/arduino_serial/: package.xml  setup.py
ROS Codes/arduino_serial/arduino_serial/: serial_nodes.py
ROS Codes/slam_bot/: CMakeLists.txt  package.xml
ROS Codes/slam_bot/config/: nav2_params.yaml
ROS Codes/slam_bot/launch/: display.launch.py  navigation.launch.py
ROS Codes/slam_bot/rviz/: urdf_config.rviz
ROS Codes/slam_bot/src/description/: slam_bot_description.urdf
ROS Codes/slam_bot_hardware/: CMakeLists.txt  hardware_plugins.xml  package.xml
ROS Codes/slam_bot_hardware/include/slam_bot_hardware/: arduino_comms.hpp  arduino_hardware.hpp  visibility_control.h
ROS Codes/slam_bot_hardware/slam_bot_hardware/: arduino_comms_python.py
ROS Codes/slam_bot_hardware/src/: arduino_comms.cpp  arduino_hardware.cpp
Test Codes/Arduino/TestMotors/: TestMotors.ino
Test Codes/Arduino/TestPID/: TestPID.ino
Test Codes/Arduino/TestROSSerialTransfer/: TestROSSerialTransfer.ino
Test Codes/Arduino/TestServos/: TestServos.ino
Test Codes/Python/: serial_arduino.py
Test Codes/Python/arserenv/: pyvenv.cfg
Test Codes/Python/arserenv/Scripts/: activate  activate.bat
