<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_serial</name>
  <version>1.0.0</version>
  <description>A package with nodes for communicating with the Arduino controlling the motors/encoders</description>
  <maintainer email="pliam1105@gmail.com">pliam1105</maintainer>
  <license>MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <exec_depend>pySerialTransfer</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
